// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lane C golden — the phone (390 × 844 iOS) (a) /contract for the fixture job (no invitee email on file) 1`] = `
{
  "lines": 932,
  "sha256": "4eaf627b2db83f4d13d533eb472421ce6612390d3425b12390141d6c6d142247",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (b) /change-order, a new CO on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "6dff98b972d5b48b4f121c2d215cd691ff14f769fffb4e9daeb2567b9e0b87ee",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (c) /estimate-wizard for a job that already has an estimate 1`] = `
{
  "lines": 434,
  "sha256": "167bbe2eb7cc435415137283df5e25ca797eda4fb382446c180f28f5ac70430a",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (d) /smart-proposal for the fixture job 1`] = `
{
  "lines": 626,
  "sha256": "3e207df48c169fd71254215b9e2c81ba6300f63a76b1968e4ff9c27eefa60e02",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (e) /quick-quote 1`] = `
{
  "lines": 435,
  "sha256": "bb93d3e6333577d9e21d73e7f43156d6ca184785e8d92175a06c8f45e7af0d57",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (f) /invoice, an overdue sent invoice 1`] = `
{
  "lines": 993,
  "sha256": "440451e6a0e512df28b3f1e750dede99e66c645f9cbb4efeb60980c34b5f3f48",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (g) /invoice, a paid invoice 1`] = `
{
  "lines": 928,
  "sha256": "5caf8c01e4fe5769b6c3d689e54daf2cc7ebefa36bb4883cd3deccd0b9607024",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (h) /invoice, a new invoice on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "fcfb513231103d5a94b0a3f961802f5f54c7880ae79140044178e23e3115677b",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (i) /payments with two overdue invoices 1`] = `
{
  "lines": 493,
  "sha256": "9fa01d3e27fdc5a4139404c2a0daed77e8d83e8dc517b257f8d3657312940e38",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (j) /lien-waivers for the fixture job 1`] = `
{
  "lines": 471,
  "sha256": "284784cdf87fdea442a372888134d6d1be28ae921f5d07c72d1cc4ce8df8b4d4",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (k) /sub-portal-setup for a sub on the fixture job 1`] = `
{
  "lines": 490,
  "sha256": "d7862d52bb413f68fb62fa755f50d528968f4798cd41d71d916a6b96ac03a1bc",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (l) /takeoff-estimate for the fixture job 1`] = `
{
  "lines": 347,
  "sha256": "efbefc2fc356159e809784281af4e2dc6b9a7d179239997cb03573e39459eecd",
}
`;
